--- a/mx.html
+++ b/mx.html
@@ -346,8 +346,8 @@
 
            function freshdata(){
                 if(nodeIsShow('tab-4')){
-                    //freshTable();
-                    test();
+                    freshTable();
+                    //test();
                 }else{
                     if(nodeIsShow('tab-5')){
                         freshPosition();
